fix alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
 .dashboard {
   height: 100%;
   .right-content {
-    margin-left: 225px;
+    margin-left: 17%;
     overflow: auto;
     height: 100%;
   }
